--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <div class="back">
                 <img class="nirvana_band" src="nirvanaB.PNG" />
             </div>
+            <p>Nirvana es la mejor banda de grunge de todos los tiempos</p>
 
         </div>
 
